# scrape-academy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
example/: get_concurrent.py  load_save.py  simple.py
src/scrapeacademy/: __init__.py  cache.py  cli.py  const.py  context.py
