[metadata]
name = ScrapeAcademy
version = attr: scrapeacademy.__version__
url = https://scrapeacademy.github.io
author = Atsuo Ishimoto
description = ScrapeAcademy
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

project_urls =
    Documentation = https://scrapeacademy.github.io/
    Source = https://github.com/scrapeacademy

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:

install_requires =
    aiohttp
    aiolimiter
    click


[options.extras_require]
dev =
    wheel
    twine
    pytest
    mypy
    black
    flake8
    autoflake
    pre-commit

[options.entry_points]
console_scripts =
    scrapeacademy = scrapeacademy.cli:cli


[flake8]
exclude = .git,__pycache__,.venv,build,dist
max-line-length = 120
ignore =
    E203, # whitespace before ':'
    E261, # at least two spaces before inline comment
    E731, # do not assign a lambda expression, use a def
    W503, # line break before binary operator
    E401, # multiple imports on one line
    E231, # missing whitespace after ','
