[metadata]
name = scape-academy
version = attr: scrapeacademy.__version__
url = https://github.com/sojin-project/scrape-academy
author = Atsuo Ishimoto
description = A framework and an utility helps you to develop web scraping applications.
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

project_urls =
    Documentation = https://github.com/sojin-project/scrape-academy
    Source = https://github.com/sojin-project/scrape-academy

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:

install_requires =
    aiohttp
    aiolimiter
    click


[options.extras_require]
dev =
    wheel
    twine
    pytest
    mypy
    black
    flake8
    autoflake
    pre-commit

[options.entry_points]
console_scripts =
    scrapeacademy = scrapeacademy.cli:cli

[bdist_wheel]
universal=1

[flake8]
exclude = .git,__pycache__,.venv,build,dist
max-line-length = 120
ignore =
    E203, # whitespace before ':'
    E261, # at least two spaces before inline comment
    E731, # do not assign a lambda expression, use a def
    W503, # line break before binary operator
    E401, # multiple imports on one line
    E231, # missing whitespace after ','
